# BackendLivrosEbacPython

./: .coverage  .env  .env-example  Dockerfile  README.md  aplicacao.py  appTarefas.py  aula5.py  celery_app.py  deployment.yaml  docker-compose.yml  docker-compose.yml.bak  kafka_producer.py  livros.db  main.py  main.py.bak  modulo24.py  pyproject.toml  pyproject.toml.bak  revicao.py  service.yaml  tarefas.db  tasks.py  teste.py
.github/workflows/: python-app.yml
tests/: test_auth.py  test_database.py  test_hello_world.py  test_tasks_celery.py  test_tasks_endpoint.py
